--- a/rps.html
+++ b/rps.html
@@ -13,9 +13,9 @@
 
 <body>
    <div id = "selectors">
-<button class ="paper"><i class="far fa-hand-paper"></i></button>
-<button class = "rock"><i class="far fa-hand-rock"></i></button>
-<button class = "scissors"><i class="far fa-hand-scissors"></i></button>
+<button id = "paper" class ="btn"><i class="far fa-hand-paper"></i></button>
+<button id = "rock" class = "btn"><i class="far fa-hand-rock"></i></button>
+<button id = "scissors" class = "btn"><i class="far fa-hand-scissors"></i></button>
     </div>
 </body>
 
