Fixed button orientation / prep for js

--- a/rps.html
+++ b/rps.html
@@ -12,10 +12,10 @@
 </head>
 
 <body>
-   <div id = "selectors">
-<button id = "paper" class ="btn"><i class="far fa-hand-paper"></i></button>
-<button id = "rock" class = "btn"><i class="far fa-hand-rock"></i></button>
-<button id = "scissors" class = "btn"><i class="far fa-hand-scissors"></i></button>
+    <div id = "selectors">
+        <button id = "rock" class = "btn"><i class="far fa-hand-rock fa-rotate-90"></i></button>
+        <button id = "paper" class ="btn"><i class="far fa-hand-paper fa-rotate-90"></i></button>
+        <button id = "scissors" class = "btn"><i class="far fa-hand-scissors fa-flip-horizontal"></i></button>
     </div>
 </body>
 
